k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-aws-monitor-ingress
  namespace: default
  labels:
    app: flask-aws-monitor
    component: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
  - host: flask-aws-monitor.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-aws-monitor-clusterip
            port:
              number: 5001
  - http:
      paths:
      - path: /flask-aws-monitor
        pathType: Prefix
        backend:
          service:
            name: flask-aws-monitor-clusterip
            port:
              number: 5001
